--- a/app/templates/plugins.html
+++ b/app/templates/plugins.html
@@ -4,6 +4,7 @@
   <table class="table table-striped">
     <thead>
       <tr>
+        <th scope="col"></th>
         <th scope="col">Title</th>
         <th scope="col">Downloads</th>
         {% if not mine %}<th scope="col">Author</th>{% endif %}
@@ -15,11 +16,12 @@
     <tbody>
       {% for p in plugins %}
       <tr>
+        <td>{% if p.icon_file %}<img style="height: 20px;" src="{{ url_for('.icon', name=p.id) }}">{% endif %}</td>
         <td><a href="{{ url_for('.plugin', name=p.id) }}">{{ p.title }}</a></td>
         <td>{{ p.downloads or '-' }}</td>
         {% if not mine %}<td>{{ p.created_by.name }}</td>{% endif %}
-        <td title="{{ p.last_version.created_on.isoformat(' ') }}">{{ p.last_version.created_on | ago }}</td>
-        <td>{{ p.last_version.version_str }}</td>
+        <td title="{{ p.last_eversion.created_on.isoformat(' ') }}">{{ p.last_eversion.created_on | ago }}</td>
+        <td>{{ p.last_eversion.version_str }}</td>
         <td>{{ p.country or '-' }}</td>
       </tr>
       {% endfor %}
