--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -18,7 +18,7 @@
           {% if g.user %}
           <li class="nav-item"><a class="nav-link" href="{{ url_for('plugins.my') }}">My Plugins</a></li>
           {% endif %}
-          <li class="nav-item"><a class="nav-link" href="https://every-door.app/docs/plugins/">Documentation</a></li>
+          <li class="nav-item"><a class="nav-link" href="https://every-door.app/plugins/">Documentation</a></li>
         </ul>
         <div class="d-lg-flex justify-content-lg-end">
           <form action="{{ url_for('plugins.search') }}" role="search" class="me-2 mb-2 mb-lg-0">
