--- a/app/templates/plugin.html
+++ b/app/templates/plugin.html
@@ -3,7 +3,7 @@
 {% block content %}
   <p><a href="{{ url_for('.list') }}">← back to the list</a></p>
 
-  <h1>{% if plugin.icon_file %}<img style="height: 20px; margin-right: 10px;" src="{{ url_for('.icon', name=plugin.id) }}">{% endif %}{{ plugin.title }}{% if g.user == plugin.created_by %} <a class="btn btn-outline-primary" href="{{ url_for('.edit', name=plugin.id) }}">Edit plugin</a>{% endif %}</h1>
+  <h1>{% if plugin.icon_file %}<img style="height: 20px; margin-right: 10px;" src="{{ url_for('.icon', name=plugin.id, ext=plugin.icon) }}">{% endif %}{{ plugin.title }}{% if g.user == plugin.created_by %} <a class="btn btn-outline-primary" href="{{ url_for('.edit', name=plugin.id) }}">Edit plugin</a>{% endif %}</h1>
   <p>Published by {{ plugin.created_by.name }}</p>
   <div class="bg-info-subtle p-3 my-3 w-75 rounded">{{ plugin.description | markdown }}</div>
   {% if plugin.homepage %}
