Download experimental versions

--- a/app/templates/plugin.html
+++ b/app/templates/plugin.html
@@ -10,7 +10,7 @@
   <p><a href="{{ plugin.homepage }}" target="_blank">Open plugin home page</a></p>
   {% endif %}
 
-  {% if plugin.last_version %}
+  {% if plugin.versions %}
   <h2 class="mt-3">Download</h2>
   <p>To install a plugin, there are four options:</p>
   <ul>
